# LevitateOS

./: .gitignore  .gitmodules  AGENTS.md  BACKLOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  QUALITY.md  README.md  SECURITY.md  SUPPLY-CHAIN.md  TODO.md  UNIX.md  WORKFLOW.md  build-iso.sh  checkpoints.md  debug.gdb  debug_crash.gdb  debug_watch.gdb  debug_watch_auto.gdb  debug_watch_final.gdb  debug_watch_silent.gdb  gource-levitate.sh  initramfs.cpio  justfile  limine.cfg  linker.ld  package.json  run-gui.sh  run-pixel6.sh  run-term.sh  run-test.sh  run-vm.sh  run-vnc.sh  run.sh  shell.asm  stages.md  (+4 more)
.cargo/: config.toml
.github/: copilot-instructions.md  pull_request_template.md
.gource/: captions.txt
.ralph/: CLAUDE-acorn.md  CLAUDE-iuppiter.md  NEXT_NIGHT.md  learnings.txt  prd.md  progress.txt  ralph.sh
.teams/: APOLOGY_TO_TEAM_092.md  KNOWLEDGE_bare-metal-testing-checklist.md  KNOWLEDGE_install-test-debugging.md  KNOWLEDGE_login-prompt-debugging.md  KNOWLEDGE_reward-hacking-prevention.md  KNOWLEDGE_source-code-audit-results.md  TEAM_001_package-recipe-crate.md  TEAM_002_recipe-executor.md  TEAM_005_xtask-vm.md  TEAM_014_enhanced-recipe-format.md  TEAM_017_void-musl-research.md  TEAM_018_feature_page_tables.md  TEAM_018_wayland-adjustments.md  TEAM_021_recipe-vm-refactor.md  TEAM_022_llm-toolkit-extraction.md  TEAM_023_llm-toolkit-extraction-complete.md  TEAM_026_hero-redesign.md  TEAM_030_levitateiso-iso-builder.md  TEAM_031_rhai-recipe-rewrite.md  TEAM_032_feature_filesystem.md  TEAM_034_leviso-iso-auto-download.md  TEAM_036_recipe-package-manager.md  TEAM_037_recipe-bugfixes.md  TEAM_039_recipe-pm-bug-fixes.md  TEAM_040_recipe-pm-features.md  TEAM_046_qemu-live-iso-test.md  TEAM_047_implement_buddy_allocator.md  TEAM_052_syntax-highlighting.md  TEAM_053_qemu-virtual-disk.md  TEAM_054_recipe-dep-improvements.md  TEAM_055_testing_review.md  TEAM_058_leviso-test-suite.md  TEAM_062_e2e-install-tests.md  TEAM_063_docs-tui-parity.md  TEAM_064_stage3-tarball-builder.md  TEAM_065_submodule-standardization.md  TEAM_066_website-astro-migration.md  TEAM_069_claudemd-astro-update.md  TEAM_070_website-design-fixes.md  TEAM_072_stage3-bugs-fixes.md  (+163 more)
.windsurf/: rules
config/: linux-x86_64.config
crates/drivers/virtio-net/: Cargo.toml
crates/levitate/: Cargo.toml
crates/levitate/src/: main.rs
crates/userspace/eyra/: Cargo.toml  NOSTARTFILES_README.md  rust-toolchain.toml
crates/userspace/eyra/brush/: Cargo.toml
crates/userspace/eyra/brush/src/: main.rs
crates/userspace/eyra/cat/: Cargo.toml  build.rs
crates/userspace/eyra/cat/.cargo/: config.toml
crates/userspace/eyra/cat/src/: main.rs  main.rs.bak
crates/userspace/eyra/coreutils-false/: Cargo.toml
crates/userspace/eyra/coreutils-false/src/: main.rs
crates/userspace/eyra/coreutils-true/: Cargo.toml
crates/userspace/eyra/coreutils-true/src/: main.rs
crates/userspace/eyra/cp/: Cargo.toml
crates/userspace/eyra/cp/src/: main.rs
crates/userspace/eyra/echo/: Cargo.toml  build.rs
crates/userspace/eyra/echo/src/: main.rs
crates/userspace/eyra/env/: Cargo.toml
crates/userspace/eyra/env/src/: main.rs
crates/userspace/eyra/eyra-hello/: Cargo.toml
crates/userspace/eyra/eyra-hello/src/: main.rs
crates/userspace/eyra/false/: Cargo.toml
crates/userspace/eyra/false/src/: main.rs
crates/userspace/eyra/libsyscall/: Cargo.toml
crates/userspace/eyra/libsyscall-tests/: Cargo.toml
crates/userspace/eyra/libsyscall-tests/src/: main.rs
crates/userspace/eyra/ln/: Cargo.toml
crates/userspace/eyra/ln/src/: main.rs
crates/userspace/eyra/ls/: Cargo.toml  build.rs
crates/userspace/eyra/ls/src/: main.rs
crates/userspace/eyra/mkdir/: Cargo.toml
crates/userspace/eyra/mkdir/src/: main.rs
crates/userspace/eyra/mv/: Cargo.toml
crates/userspace/eyra/mv/src/: main.rs
crates/userspace/eyra/pwd/: Cargo.toml  build.rs
crates/userspace/eyra/pwd/.cargo/: config.toml
crates/userspace/eyra/pwd/src/: main.rs
crates/userspace/eyra/rm/: Cargo.toml
crates/userspace/eyra/rm/src/: main.rs
crates/userspace/eyra/rmdir/: Cargo.toml
crates/userspace/eyra/rmdir/src/: main.rs
crates/userspace/eyra/touch/: Cargo.toml
crates/userspace/eyra/touch/src/: main.rs
crates/userspace/eyra/true/: Cargo.toml
crates/userspace/eyra/true/src/: main.rs
distro-builder/: Cargo.toml
docs/: ARCHITECTURE.md  BEHAVIORS_CpioArchive.md  BEHAVIORS_InitramfsBuilder.md  BOOT_SPECIFICATION.md  DEBUGGING.md  GOTCHAS.md  INSTALLATION_KNOWLEDGE.md  ISSUE_SEED_BACKLOG.md  ROADMAP.md  USERSPACE_DEV.md  VIRTIO_GPU_DRIVER_KNOWLEDGE.md  VISION.md  ab-default-plan.md  archiso-parity-checklist.md  installer-llm-training-requirements.md  installer-requirements.md  kernel_development_best_practices.md  leviso-duplication-audit.md  manual-install-plan.md  multi-tui-installer-proposal.md  recipe-engine-audit.md  rust_porting_notes.md  sway-e2e-test.md  verification_guide.md  x86_64_architecture_gap_analysis.md  x86_64_context_switch_bug.md  x86_64_per_cpu_abstraction.md
initramfs/: initramfs.toml
initrd_root/: cat  cp  init  ln  ls  mkdir  mv  pwd  repro  repro_crash  rm  rmdir  shell  signal_test  touch
iso_root/: limine.cfg
levitate-error/: Cargo.toml
levitate-gpu/: Cargo.toml
levitate-hal/: Cargo.toml
levitate-pci/: Cargo.toml
levitate-utils/: Cargo.toml
levitate-virtio/: Cargo.toml
levitate-virtio-gpu/: Cargo.toml
levitate-virtio/src/: queue.rs  transport.rs
rootfs-tests/: CLAUDE.md
scripts/: debug_higher_half.sh  make_initramfs.sh  test_behavior.sh  verify-display.js
src/: main.rs  run.rs
tests/: actual_boot.txt  golden_boot.txt  golden_boot_x86_64.txt  golden_debug_mem_aarch64.txt  golden_debug_mem_x86_64.txt  golden_debug_regs_aarch64.txt  golden_debug_regs_x86_64.txt  golden_shutdown.txt
toolchain/: .gitignore  busybox-levitateos.config
tools/: dnf-guard.sh  install-hooks.sh  pre-commit-hook.sh  sync-submodules-default-branches.sh
tools/levitate-test/: Cargo.toml
tools/levitate-test/src/: main.rs
userspace/: Cargo.toml  README.md
(+852 files in other folders)
