[workspace]
members = [
    "kernel",
    "levitate-hal",
    "levitate-utils",
    "xtask",
]
resolver = "2"

[workspace.lints.rust]
# Note: unsafe_code is NOT denied - this is an OS kernel, unsafe is required for HAL/MMU/interrupts
# Instead, we enforce safety documentation for all unsafe blocks
unsafe_op_in_unsafe_fn = "deny"
# Rule 6: Robustness - no panics
unconditional_panic = "deny"

[workspace.lints.clippy]
# Rule 5 & 6: Safety and Robustness
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
# Rule 13: Representation - exhaustive matches
match_same_arms = "deny"
# Rule 20: Economy - efficient abstractions
pedantic = { level = "warn", priority = -1 }
# Overrides for pedantic
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
