# TEAM_476: LevitateOS is now a Rust-native Linux distribution builder.
# The xtask package IS the product - it builds Linux + musl + BusyBox + OpenRC.
[workspace]
members = ["xtask"]
default-members = ["xtask"]
resolver = "2"

[workspace.lints.clippy]
# xtask-specific lints (relaxed for CLI tooling)
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[profile.dev]
# xtask is a CLI tool, normal panic behavior
# panic = "unwind" (default)

[profile.release]
lto = true
codegen-units = 1
