[workspace]
resolver = "2"
members = [
    "distro-spec",
    "distro-contract",
    "distro-builder",
    "distro-builder/install-split-pane",
    "leviso",
    "AcornOS",
    "IuppiterOS",
    "RalphOS",
    "leviso-elf",
    "xtask",
    "tools/recipe",
    "tools/recstrap",
    "tools/recfstab",
    "tools/recchroot",
    "tools/recuki",
    "tools/reciso",
    "tools/recart",
    "tools/recab",
    "tools/recpart",
    "tools/recqemu",
    "tools/recshuttle",
    "testing/fsdbg",
    "testing/cheat-guard",
    "testing/cheat-test",
    "testing/install-tests",
    "testing/hardware-compat",
    "testing/rootfs-tests",
]

[workspace.package]
edition = "2021"

[profile.release]
strip = true
lto = true
