[package]
name = "levitate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust-native Linux distribution builder"

[[bin]]
name = "levitate"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bytesize = "1.3"
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
libc = "0.2"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
num_cpus = "1.16"

[lints]
workspace = true
