[package]
name = "levitate-test"
version = "0.1.0"
edition = "2021"
description = "In-VM test suite for LevitateOS - standalone binary"

[workspace]
# Empty workspace to mark this as standalone

[[bin]]
name = "levitate-test"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
