# TEAM_380: Simplified workspace - coreutils is now a submodule with its own workspace
# Individual utility crates removed in favor of multi-call binary
[workspace]
members = [
    "eyra-hello",
    "eyra-test-runner",
]
resolver = "2"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true

[unstable]
build-std-features = ["panic_immediate_abort"]

