# TEAM_363: Eyra-based cat utility for LevitateOS
[package]
name = "cat"
version = "0.1.0"
edition = "2021"
description = "Concatenate and print files to standard output"

# Exclude from parent workspace - uses different toolchain
[workspace]

# Eyra provides std via pure-Rust Linux syscalls
[dependencies]
eyra = { version = "0.22", features = ["experimental-relocate"] }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true

[unstable]
build-std-features = ["panic_immediate_abort"]
