# TEAM_364: uutils-based cat for LevitateOS
[package]
name = "cat"
version = "0.2.0"
edition = "2021"
description = "GNU-compatible cat from uutils-coreutils"

# Exclude from parent workspace - uses different toolchain
[workspace]

[dependencies]
eyra = { version = "0.22", features = ["experimental-relocate"] }
uu_cat = "0.2.2"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true

[unstable]
build-std-features = ["panic_immediate_abort"]
