# TEAM_364: Minimal false for LevitateOS
# Note: uu_false has linker conflicts with Eyra, using minimal impl
[package]
name = "coreutils-false"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
eyra = { version = "0.22", features = ["experimental-relocate"] }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true

[unstable]
build-std-features = ["panic_immediate_abort"]
