# TEAM_364: Minimal true for LevitateOS
# Note: uu_true has linker conflicts with Eyra, so using minimal impl
[package]
name = "coreutils-true"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
eyra = { version = "0.22", features = ["experimental-relocate"] }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true

[unstable]
build-std-features = ["panic_immediate_abort"]
