# TEAM_366: Minimal echo for LevitateOS
# Note: uu_echo has hard ICU dependency causing linker conflicts with Eyra
# Using minimal implementation instead
[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
eyra = { version = "0.22", features = ["experimental-relocate"] }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true

[unstable]
build-std-features = ["panic_immediate_abort"]
