[package]
name = "eyra-hello"
version = "0.1.0"
edition = "2021"
description = "Test binary for Eyra std support on LevitateOS"

# TEAM_351: Eyra replaces std with pure-Rust Linux syscall implementation
# Using nightly-2025-04-28 as specified by Eyra's rust-toolchain.toml
# TEAM_354: experimental-relocate enables true static-pie (self-relocating)
[dependencies]
# TEAM_395: Official Eyra pattern - rename to std for native std support
std = { package = "eyra", version = "0.22", features = ["experimental-relocate"] }

# TEAM_351: For minimal binary size, use immediate-abort (nightly)
