# TEAM_380: Migrated libsyscall to eyra directory for std support in integration tests
# TEAM_395: libsyscall is pure no_std - it does NOT depend on eyra
# The binary crates (libsyscall-tests, etc.) bring in eyra for std support
[package]
name = "libsyscall"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Pure no_std syscall library for LevitateOS userspace"

[lib]

[dependencies]
linux-raw-sys = { version = "0.4", default-features = false, features = ["errno", "general", "ioctl", "no_std"] }
