# TEAM_364: uutils-based mkdir for LevitateOS
[package]
name = "mkdir"
version = "0.2.0"
edition = "2021"
description = "GNU-compatible mkdir from uutils-coreutils"

[workspace]

[dependencies]
eyra = { version = "0.22", features = ["experimental-relocate"] }
uu_mkdir = "0.2"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true

[unstable]
build-std-features = ["panic_immediate_abort"]
