# TEAM_363: Eyra-based pwd utility for LevitateOS
[package]
name = "pwd"
version = "0.1.0"
edition = "2021"
description = "Print the current working directory"

# Exclude from parent workspace - uses different toolchain
[workspace]

# Eyra provides std via pure-Rust Linux syscalls
[dependencies]
eyra = { version = "0.22", features = ["experimental-relocate"] }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true

[unstable]
build-std-features = ["panic_immediate_abort"]
