# TEAM_364: uutils-based rmdir for LevitateOS
[package]
name = "rmdir"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
eyra = { version = "0.22", features = ["experimental-relocate"] }
uu_rmdir = "0.2"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
strip = true

[unstable]
build-std-features = ["panic_immediate_abort"]
